Inicio da responsividade da aba Sobre

--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
     <div class="about-exp">
 
      <div class="cards">
-      <ul class="about-card">
+      <ul class="about-card card-one">
         <li><img src="./images/icons/experience.svg" alt=""></li>
         <li class="font-1-m">Experiência</li>
         <li class="font-2-s cor-9">1 Ano</li>
       </ul>
 
-      <ul  class="about-card"  >  
+      <ul  class="about-card card-two"  >  
         <li><img src="./images/icons/completos.svg" alt=""></li>
-        <li class="font-1-m">Projetos 13</li>
-        <li  class="font-2-s cor-9" > Completos</li>
+        <li class="font-1-m">Projetos </li>
+        <li  class="font-2-s cor-9" > 8+ Completos</li>
   
       </ul>
     </div> 
 
-      <p class="font-2-m cor-9">Olá! Sou Brisa Tielly, freelancer em desenvolvimento Frontend. Minha paixão é criar e dar vida a interfaces modernas e de alta qualidade. Confira meu portfólio para ver como transformo ideias em experiênciass impressionantes!</p>
+      <p class="font-2-s cor-9">Olá! Sou Brisa Tielly, freelancer em desenvolvimento web. Minha paixão é criar e dar vida a interfaces  de alta qualidade. Confira meu portfólio!</p>
 
       <a class="pink-btn" href="./files/curriculo.pdf" download="curriculo.pdf">
         <span>Currículo</span>
