Mais adições na responsividade do container de sobre-mim

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
       <p class="font-1-m cor-8">Apresentacão</p>
     </div>
 
-    <div>
-      <img src="./images/fotos/eu.png" alt="">
+    <div class="foto-div">
+      <img class="foto" src="./images/fotos/eu.png" alt="">
     </div>
 
     <div class="about-exp">
 
-     <div class="cards">
+     <!-- <div class="cards"> -->
       <ul class="about-card card-one">
         <li><img src="./images/icons/experience.svg" alt=""></li>
         <li class="font-1-m">Experiência</li>
@@ -85,9 +85,8 @@
         <li><img src="./images/icons/completos.svg" alt=""></li>
         <li class="font-1-m">Projetos </li>
         <li  class="font-2-s cor-9" > 8+ Completos</li>
-  
       </ul>
-    </div> 
+    <!-- </div>  -->
 
       <p class="font-2-s cor-9">Olá! Sou Brisa Tielly, freelancer em desenvolvimento web. Minha paixão é criar e dar vida a interfaces  de alta qualidade. Confira meu portfólio!</p>
 
