Inicio da página de habilidades

--- a/index.html
+++ b/index.html
@@ -108,6 +108,32 @@
 
     </div>
   </section>
+
+  <section class="habilities container">
+      <h2 class="font-1-xl">hábilidades<span class="cor-p1">.</span></h2>
+      <p class="font-1-m cor-8">Meu nível técnico</p>
+    
+      <div class="habilities-skills">
+        <h3 class="font-1-l cor-9">Frontend developer</h3>
+        <ul>
+          <li>
+             <p class="font-1-l cor-11">HTML</p>  
+             <span class="font-2-s cor-9">Avançado</span>
+          </li>
+
+          <li>
+            <p class="font-1-l cor-11">CSS</p>  
+            <span class="font-2-s cor-9">Avançado</span>
+         </li>
+
+         <li>
+          <p class="font-1-l cor-11">Javascript</p>  
+          <span class="font-2-s cor-9">Avançado</span>
+       </li>
+        </ul>
+      </div>
+
+  </section>
   
   <script type= "module" src="./script.js"></script>
 </body>
