Alteração nas habilidades e criação da responsividade

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
           <p class="font-1-l cor-11">Javascript</p>  
           <span class="font-2-s cor-9">Avançado</span>
        </li>
+
+       <li>
+        <p class="font-1-l cor-11">Git/GitHub</p>  
+        <span class="font-2-s cor-9">Avançado</span>
+     </li>
+
+     <li>
+      <p class="font-1-l cor-11">React</p>  
+      <span class="font-2-s cor-9">Básico</span>
+   </li>
         </ul>
       </div>
 
