--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap"
     rel="stylesheet"
   />
+  <link rel="icon" href="./images/icons/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+
   <title>Portfolio</title>
   <link rel="stylesheet" href="./style.css">
 </head>
