Mais ajustes na responsividade das habilidades

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     rel="stylesheet"
   />
   <link rel="icon" href="./images/icons/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="./images/icons/favicon.ico" type="imagige/x-icon">
 
   <title>Portfolio</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <header>
       <div class="header container">
@@ -147,6 +148,8 @@
       </div>
 
   </section>
+
+  <section>Projetos</section>
   
   <script type= "module" src="./script.js"></script>
 </body>
